<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">IT Quiz </string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">IT Quiz</string>
    <string name="about_text">IT Quiz will help remind you of important concepts you have learned and will teach in IT development.\n\nTry to salve all questions and become good software developer in your field. \nI hope this quizzes will help you to strength your knowledge.\n \nCreated by: Abdusamad</string>
    <string name="rules_text">Select the answer from the options given. There is a list of checked and unchecked questions that can show if the question checked or unchecked. \n When you click the submit button it will guide you to Results screen .You can see your true, false and un attempted questions list as well as your spent time for the quiz . \n Remember chance is given once only! You can not modify selected questions after submitting.</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="title_about_trivia">About IT Quiz</string>
    <string name="title_trivia_rules">IT Quiz Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button">  Submit  </string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>

    <!-- My strings  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">Time:</string>
    <string name="submit">SUBMIT</string>
    <string name="go_categories">Go Categories</string>
    <string name="something">Something</string>
    <string name="start_android_quiz">start Android Quiz</string>
    <string name="start_web_quiz">Matematika test</string>
    <string name="start_sql_database_quiz">start SQL database Quiz</string>
    <string name="a">A.</string>
    <string name="b">B.</string>
    <string name="c">C.</string>
    <string name="d">D.</string>
    <string name="zero_coins">0 coins</string>
    <string name="not_try">Not Try</string>
</resources>
