<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.fragments.TitleFragment">

        <LinearLayout
            android:id="@+id/titleConstraint"
            android:layout_width="match_parent"
            android:background="@drawable/white_background"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">




            <TextView
                android:layout_width="match_parent"
                android:text="QUIZ TIME!\nGOOD LUCK..."
                android:gravity="center"
                android:textStyle="bold"
                android:padding="16dp"
                android:textSize="32dp"
                android:textColor="@color/colorScore"
                android:layout_height="wrap_content"/>



            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">




                <Button
                    android:id="@+id/playButton"
                    android:background="@drawable/back_bordered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16sp"
                    android:text="@string/start_android_quiz"
                    android:layout_margin="16dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"
                    />

                <Button
                    android:id="@+id/play_web_quiz"
                    android:background="@drawable/back_bordered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16sp"
                    android:layout_margin="16dp"
                    android:text="@string/start_web_quiz"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"
                    />

                <Button
                    android:id="@+id/play_sql_quiz"
                    android:background="@drawable/back_bordered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16sp"
                    android:text="@string/start_sql_database_quiz"
                    android:layout_margin="16dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"
                    />
            </LinearLayout>








        </LinearLayout>




</layout>