<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_background"
    android:orientation="vertical"
    android:layout_margin="8dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="12dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:textSize="22sp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:id="@+id/question_order"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:textSize="22sp"
            android:gravity="center"
            android:id="@+id/score"
            android:textStyle="bold"
            android:layout_toStartOf="@id/coins"
            android:textColor="@color/green"
            android:layout_marginEnd="8dp"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="30dp"
            android:id="@+id/coins"
            android:contentDescription="@string/something"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_coins"
            android:layout_height="30dp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:paddingEnd="12dp"
                android:paddingStart="12dp"
                android:text="@string/rules_text"
                android:id="@+id/question_text"
                android:textSize="22sp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_margin="12dp"
                android:padding="8dp"
                android:id="@+id/answer_1"
                android:background="@drawable/button_border_black"
                android:layout_height="wrap_content">



                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/a"
                    android:padding="4dp"
                    android:id="@+id/answer1"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:textSize="22sp"
                    android:layout_height="wrap_content">
                </TextView>


                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/answer_text1"
                    android:padding="4dp"
                    android:text="@string/something"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:layout_toEndOf="@id/answer1"
                    android:textSize="22sp"
                    android:layout_height="wrap_content">
                </TextView>


            </RelativeLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_margin="12dp"
                android:id="@+id/answer_2"
                android:padding="8dp"
                android:background="@drawable/button_border_black"
                android:layout_height="wrap_content">



                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/b"
                    android:padding="4dp"
                    android:id="@+id/answer2"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:textSize="22sp"
                    android:layout_height="wrap_content">
                </TextView>


                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/something"
                    android:padding="4dp"
                    android:id="@+id/answer_text2"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:layout_toEndOf="@id/answer2"
                    android:textSize="22sp"
                    android:layout_height="wrap_content">
                </TextView>


            </RelativeLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_margin="12dp"
                android:id="@+id/answer_3"
                android:padding="8dp"
                android:background="@drawable/button_border_black"
                android:layout_height="wrap_content">



                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/c"
                    android:padding="4dp"
                    android:id="@+id/answer3"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:textSize="22sp"
                    android:layout_height="wrap_content">
                </TextView>


                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/something"
                    android:padding="4dp"
                    android:id="@+id/answer_text3"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:layout_toEndOf="@id/answer3"
                    android:textSize="22sp"
                    android:layout_height="wrap_content">
                </TextView>


            </RelativeLayout>




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_margin="12dp"
                android:id="@+id/answer_4"
                android:padding="8dp"
                android:background="@drawable/button_border_black"
                android:layout_height="wrap_content">



                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/d"
                    android:padding="4dp"
                    android:id="@+id/answer4"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:textSize="22sp"
                    android:layout_height="wrap_content">
                </TextView>


                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/something"
                    android:padding="4dp"
                    android:id="@+id/answer_text4"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:layout_toEndOf="@id/answer4"
                    android:textSize="22sp"
                    android:layout_height="wrap_content">
                </TextView>


            </RelativeLayout>









        </LinearLayout>

    </ScrollView>

</LinearLayout>